# perceptron

./: .gitmodules  CMakeLists.txt  Iris.txt  main.cpp
